--- a/index.html
+++ b/index.html
@@ -18,8 +18,23 @@
       <h3>My Project</h3>
       <ul>
         <div class="one">
+          <div class="one">
+            <a href="./newaviator/index.html">
+              <div class="image">
+                <img src="./image/aviator.png" alt="" />
+              </div>
+              <p>
+                E-COMMRCE <br />
+                Website
+              </p>
+            </a>
+          </div>
+        </div>
+        <div class="one">
           <a href="./setingMarcting/indix.html">
-            <img src="./image/PRODUCT_MANAGENT_SYSTEM.png" alt="" />
+            <div class="image">
+              <img src="./image/PRODUCT_MANAGENT_SYSTEM.png" alt="" />
+            </div>
             <p>
               PRODUCT <br />
               MANAGENT SYSTEM
@@ -28,32 +43,46 @@
         </div>
         <div class="one">
           <a href="./elzero-4/index.html">
-            <img src="./image/Elzero_4.png" alt="" />
-            <p>Elzero_4</p>
+            <div class="image">
+              <img src="./image/Elzero_4.png" alt="" />
+            </div>
+            E-COMMRCE <br />
+            Dashboard
           </a>
         </div>
         <div class="one">
           <a href="./timups-html/index.html">
-            <img src="./image/timups-html.png" alt="" />
-            <p>timups-html</p>
+            <div class="image">
+              <img src="./image/timups-html.png" alt="" />
+            </div>
+            Timups <br />
+            LandingPage
           </a>
         </div>
         <div class="one">
           <a href="./rock-paper-scissors-master/index.html">
-            <img src="./image/rock-paper-scissors-master.png" alt="" />
-            <p>Rock Paper Scissors</p>
+            <div class="image">
+              <img src="./image/rock-paper-scissors-master.png" alt="" />
+            </div>
+            Rock Paper Scissors <br />
+            Game
           </a>
         </div>
         <div class="one">
           <a href="./templatemo_579_cyborg_gaming/index.html">
-            <img src="./image/feature-left.jpg" alt="" />
+            <div class="image">
+              <img src="./image/feature-left.jpg" alt="" />
+            </div>
             <p>Games Streming</p>
           </a>
         </div>
         <div class="one">
           <a href="./XO/index.html">
-            <img src="./image/XO.jpg" alt="" />
-            <p>X × O</p>
+            <div class="image">
+              <img src="./image/XO.jpg" alt="" />
+            </div>
+            X × O <br />
+            Game
           </a>
         </div>
       </ul>
